BUGFIX - keep offscreen stuff hidden

--- a/meteor-twitter-stream/meteor-twitter-stream.css
+++ b/meteor-twitter-stream/meteor-twitter-stream.css
@@ -5,6 +5,7 @@ body, html {
 	padding: 0;
 	color:#333;
 	font-family: 'Open Sans', sans-serif;
+	overflow: hidden;
 }
 a {
 	color:#4099FF;
